IGNITE-24514 Cover the correct queries as well