@@ -17,7 +17,7 @@
 
 package org.apache.ignite.internal.processors.query;
 
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -34,17 +34,32 @@ import org.apache.ignite.failure.FailureHandler;
 import org.apache.ignite.internal.IgniteEx;
 import org.apache.ignite.internal.IgniteInternalFuture;
 import org.apache.ignite.internal.processors.cache.index.AbstractIndexingCommonTest;
+import org.apache.ignite.internal.util.typedef.F;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
 
 import static org.apache.ignite.testframework.GridTestUtils.assertThrowsWithCause;
 import static org.apache.ignite.testframework.GridTestUtils.runAsync;
 
 /**
- * Checks failed SQL query with the WITH clause (AKA Common Table Expressions (CTEs)).
+ * Checks SQL query with the WITH clause (AKA Common Table Expressions (CTEs))
+ * doesn't break the H2 SQL Engine.
  */
-public class SqlFailedCteQueryTest extends AbstractIndexingCommonTest {
+@RunWith(Parameterized.class)
+public class DropTableAfterCteSqlQueryTest extends AbstractIndexingCommonTest {
     /** */
     private static final String SCHEMA = "PUBLIC";
+
+    /** */
+    private static final String VALID_SQL =
+        "WITH cte AS (SELECT id FROM T2) " +
+        "SELECT * FROM T1 JOIN cte ON cte.id = T1.id";
+
+    /** */
+    private static final String INVALID_SQL =
+        "WITH cte AS (SELECT id FROM T2) " +
+        "SELECT * FROM absent_table_to_emulate_statement_parsing_failure";
 
     /** Node. */
     private IgniteEx node;
@@ -54,6 +69,22 @@ public class SqlFailedCteQueryTest extends AbstractIndexingCommonTest {
 
     /** */
     final CountDownLatch completed = new CountDownLatch(1);
+
+    /** */
+    @Parameterized.Parameter(value = 0)
+    public Boolean validSql;
+
+    /** */
+    @Parameterized.Parameter(value = 1)
+    public String sql;
+
+    /** */
+    @Parameterized.Parameters(name = "VALID_SQL={0}")
+    public static Collection<Object[]> params() {
+        return F.asList(
+            new Object[] {true, VALID_SQL},
+            new Object[] {false, INVALID_SQL});
+    }
 
     /** {@inheritDoc} */
     @Override protected IgniteConfiguration getConfiguration(String igniteInstanceName) throws Exception {
@@ -75,35 +106,44 @@ public class SqlFailedCteQueryTest extends AbstractIndexingCommonTest {
     }
 
     /**
-     * Check that failed CTE query doesn't prevent the table drop and doesn't crash the
+     * Check that CTE query doesn't prevent the table drop and doesn't crash the
      * ignite node on table recreate if used via the Ignite API.
      *
      * @throws Exception If fails.
      */
     @Test
-    public void testFailedCteQueryDoesNotCrashNode() throws Exception {
+    public void testCteQueryDoesNotCrashNode() throws Exception {
         node.createCache(new CacheConfiguration<>("T1")
-            .setQueryEntities(List.of(new QueryEntity("java.lang.Long", "T1")))
+            .setQueryEntities(List.of(
+                new QueryEntity("java.lang.Integer", "T1")
+                    .addQueryField("id", Integer.class.getName(), null)
+                    .addQueryField("data", String.class.getName(), null)
+                    .setKeyFieldName("id")
+            ))
             .setSqlSchema(SCHEMA));
 
         CacheConfiguration<Object, Object> cfg = new CacheConfiguration<>("T2")
-            .setQueryEntities(Collections.singletonList(
-                new QueryEntity("java.lang.String", "T2")
-                    .addQueryField("id", String.class.getName(), null)
+            .setQueryEntities(List.of(
+                new QueryEntity("java.lang.Integer", "T2")
+                    .addQueryField("id", Integer.class.getName(), null)
+                    .addQueryField("data", String.class.getName(), null)
                     .setIndexes(List.of(
                         new QueryIndex("id", false, "id_idx")))
-                    .setKeyFieldName("id")))
+                    .setKeyFieldName("id")
+            ))
             .setSqlSchema(SCHEMA);
 
         IgniteCache<Object, Object> cache = node.createCache(cfg);
 
-        SqlFieldsQuery qry = new SqlFieldsQuery(
-            "WITH cte AS (SELECT id FROM T2) " +
-            "SELECT * FROM absent_table_to_emulate_statement_parsing_failure"
-        );
+        addData();
 
-        // Force statement parsing failure.
-        assertThrowsWithCause(() -> cache.query(qry).getAll(), IgniteSQLException.class);
+        SqlFieldsQuery qry = new SqlFieldsQuery(sql);
+
+        if (validSql) {
+            assertEquals(1, cache.query(qry).getAll().size());
+        }
+        else
+            assertThrowsWithCause(() -> cache.query(qry).getAll(), IgniteSQLException.class);
 
         node.destroyCache("T2");
 
@@ -121,23 +161,28 @@ public class SqlFailedCteQueryTest extends AbstractIndexingCommonTest {
     }
 
     /**
-     * Check that failed CTE query doesn't prevent the table drop and doesn't prevent
+     * Check that CTE query doesn't prevent the table drop and doesn't prevent
      * the table recreate if used via the SQL API.
      */
     @Test
-    public void testFailedCteQueryDoesNotPreventTableRecreate() {
+    public void testCteQueryDoesNotPreventTableRecreate() {
         sql("CREATE TABLE T1 (id INTEGER PRIMARY KEY, data VARCHAR)");
 
         sql("CREATE TABLE T2 (id INTEGER PRIMARY KEY, data VARCHAR)");
         sql("CREATE INDEX IDX ON T2 (id)");
 
-        assertThrowsWithCause(() -> sql(
-            "WITH cte AS (SELECT id FROM T2) " +
-            "SELECT * FROM absent_table_to_emulate_failure"), IgniteSQLException.class);
+        addData();
+
+        if (validSql) {
+            assertEquals(1, sql(sql).size());
+        }
+        else
+            assertThrowsWithCause(() -> sql(sql), IgniteSQLException.class);
 
         sql("DROP TABLE T2");
 
         sql("CREATE TABLE T2 (id INTEGER PRIMARY KEY, data VARCHAR)");
+        sql("CREATE INDEX IDX ON T2 (id)");
     }
 
     /**
@@ -152,6 +197,15 @@ public class SqlFailedCteQueryTest extends AbstractIndexingCommonTest {
 
             return true;
         }
+    }
+
+    /** */
+    private void addData() {
+        sql("INSERT INTO T1 (id, data) VALUES (1, 'one')");
+        sql("INSERT INTO T1 (id, data) VALUES (2, 'two')");
+
+        sql("INSERT INTO T2 (id, data) VALUES (2, 'two')");
+        sql("INSERT INTO T2 (id, data) VALUES (3, 'three')");
     }
 
     /**
